<resources>
    <string name="app_name">Hi Buddy</string>
    <string name="user_name">Enter your username</string>
    <string name="user_pwd">Your password</string>
    <string name="btn_login">Enter</string>
    <string name="user_fullname">Enter your full name</string>
    <string name="email">Your email@email.com</string>
    <string name="contact">Contact number example: +60123456789</string>
    <string name="dob">Your DOB eg:10/08/2002</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    
    <string name="expenseFor">Expenses for..</string>
    <string name="dateExpenses">5/10/2024</string>
    <string name="price">RM</string>
<string name="totalprice">Total price RM...</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

</resources>